--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   
 </head>
 <body>
+  <!-- SITE-HEADER -->
   <header class="site-header">
     <div class="site-header-container container">
       <a class="site-header-logo" href="index.html">Where in the world?</a>
@@ -21,26 +22,230 @@
         <span class="site-header-theme-toggler-inner">
           <svg class="site-header-theme-toggler-icon" width="20" height="20" viewBox="0 0 18 17" xmlns="http://www.w3.org/2000/svg">
             <path fill-rule="evenodd" clip-rule="evenodd" d="M12.5532 11.815C8.66857 11.815 5.51929 8.92783 5.51929 5.36821C5.51929 4.0253 5.96679 2.78158 6.73143 1.75C3.69036 2.69515 1.5 5.33122 1.5 8.43807C1.5 12.3385 4.94929 15.5 9.20357 15.5C12.5929 15.5 15.4696 13.4932 16.5 10.7045C15.375 11.4048 14.0161 11.815 12.5532 11.815Z" fill="white" stroke="currentcolor" stroke-width="1.25"/>
-            </svg>
+          </svg>
           <span class="site-header-theme-toggler-text">Dark Mode</span>
         </span>
       </button>
     </div>
   </header>
-  
+
+  <!-- MAIN-CONTENT -->
   <main class="main-content">
     <div class="container">
-      <form class="filters" action="https://echo.htmlacademy.ru" method="GET">
-        <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
-        <select class="filters-region-select" name="region" aria-label="Regions">
-          <option selected disabled>Filter by Region</option>
-          <option>Africa</option>
-          <option>America</option>
-          <option>Asia</option>
-          <option>Europe</option>
-          <option>Oceania</option>
-        </select>
-      </form>
+      <section>
+        <!-- <h2> Filters </h2> -->
+        <form class="filters" action="https://echo.htmlacademy.ru" method="GET">
+          <input class="filters-search-input" type="search" name="search" placeholder="Search for a country…" aria-label="Country name" required>
+          <select class="filters-region-select" name="region" aria-label="Regions">
+            <option selected disabled>Filter by Region</option>
+            <option>Africa</option>
+            <option>America</option>
+            <option>Asia</option>
+            <option>Europe</option>
+            <option>Oceania</option>
+          </select>
+        </form>
+      </section>
+
+      <!-- INDEX-COUNTRIES -->
+      <section class="index-countries">
+        <!-- <h2>Countries</h2> -->
+        <ul class="index-countries-list">
+          <li class="index-countries-item">
+            <!-- INDEX-COUNTRY -->
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-germany.jpg" alt="Germany flag" width="267" height="160" srcset="image/flag-germany.jpg 1x, image/flag-germany@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="country.html">Germany</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">81,770,900</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Berlin</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-usa.jpg" alt="Usa flag" width="267" height="160" srcset="image/flag-usa.jpg 1x, image/flag-usa@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="index.html">United States of America</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">323,947,000</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Americas</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Washington, D.C.</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-brazil.jpg" alt="Brasil flag" width="267" height="160" srcset="image/flag-brazil.jpg 1x, image/flag-brazil@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="index.html">Brazil</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">206,135,893</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Americas</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Brasília</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-iceland.jpg" alt="Island flag" width="267" height="160" srcset="image/flag-iceland.jpg 1x, image/flag-iceland@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="index.html">Iceland</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">334,300</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Reykjavík</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-ex-afghanistan.jpg" alt="Ex Afghanistan flag" width="267" height="160" srcset="image/flag-ex-afghanistan.jpg 1x, image/flag-ex-afghanistan@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="index.html">Afghanistan</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">27,657,145</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Asia</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Kabul</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-aland.jpg" alt="Aland Island flag" width="267" height="160" srcset="image/flag-aland.jpg 1x, image/flag-aland@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="index.html">Åland Islands</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">28,875</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Mariehamn</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-albania.jpg" alt="Albania flag" width="267" height="160" srcset="image/flag-albania.jpg 1x, image/flag-albania@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="index.html">Albania</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">2,886,026</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Europe</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Tirana</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+          <li class="index-countries-item">
+            <div class="index-country">
+              <img class="index-country-flag" src="image/flag-algeria.jpg" alt="Algeria flag" width="267" height="160" srcset="image/flag-algeria.jpg 1x, image/flag-algeria@2x.jpg 2x">
+              <div class="index-country-info">
+                <h3 class="index-country-name">
+                  <a  class="index-country-link" href="index.html">Algeria</a>
+                </h3>
+                <dl class="index-country-details">
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Population:</dt>
+                    <dd class="index-country-details-value">40,400,000</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Region:</dt>
+                    <dd class="index-country-details-value">Africa</dd>
+                  </div>
+                  <div class="index-country-details-item">
+                    <dt class="index-country-details-title">Capital:</dt>
+                    <dd class="index-country-details-value">Algiers</dd>
+                  </div>
+                </dl>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </section>      
     </div>
   </main>
   
